parser/tests/snapshots/errors__expr_bad_postfix.snap
---
source: parser/tests/errors.rs
expression: err

---
error: unexpected end of file
  ┌─ [test snippet]:1:4
  │
1 │ x++
  │    ^


